<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Guest WiFi Connect</string>



<string name="pref_application_settings_category">Application settings</string>
<string name="pref_application_settings_category_key">applicationSettings</string>
<string name="pref_connection_settings_category">Connection settings</string>
<string name="pref_connection_settings_category_key">connectionSettings</string>
<string name="pref_additional_settings_category">Additional settings</string>
<string name="pref_additional_settings_category_key">additionalSettings</string>

<string name="pref_settings_run_as_service">Run as a service</string>
<string name="pref_settings_run_as_service_summary">Run in the background and connect to SAP Guest automatically</string>
<string name="pref_settings_run_as_service_key">runAsService</string>

<string name="pref_settings_show_icon">Show icon</string>
<string name="pref_settings_show_icon_summary">Show icon in task bar</string>
<string name="pref_settings_show_icon_key">showIcon</string>

<string name="pref_settings_start_at_boot">Start on boot</string>
<string name="pref_settings_start_at_boot_summary">Start the application at boot</string>
<string name="pref_settings_start_at_boot_key">startAtBoot</string>

<string name="pref_settings_enable_connection_sound">Enable sound</string>
<string name="pref_settings_enable_connection_sound_summary">Enable notification sound on connection</string>
<string name="pref_settings_enable_connection_sound_key">enableConnectSound</string>

<string name="pref_settings_ringtone">Select ringtone</string>
<string name="pref_settings_ringtone_summary">Choose notification ringtone</string>
<string name="pref_settings_ringtone_key">notificationRingtone</string>

<string name="pref_settings_vibrate">Vibrate</string>
<string name="pref_settings_vibrate_summary">Vibrate on connection</string>
<string name="pref_settings_vibrate_key">notificationVibrate</string>


<string name="notif_service_still_running_summary">Guest Wifi is running</string>
<string name="shared_settings_file_name">WifiConnectSharedSettings</string>

<string name="app_about_summary">Developed by David Agrest, Slava Gorelik and George Haddad.</string>
<string name="user_name">Username</string>
<string name="password">Password</string>
<string name="connect">Connect</string>
<string name="wifi_ssid">Wifi name</string>
<string name="show_password">Show password</string>
<string name="ok">Ok</string>
<string name="cancel">Cancel</string>
<string name="pick_a_network">Pick a network</string>
<string name="wifi_id">Wifi id</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="wifi_enable_question">Wifi is disabled. Do you wish to enable it ?</string>
<string name="wifi_enable_error">Unable to turn on Wifi on your device.\nPlease manually enable Wifi and try again.</string>
<string name="connect_description">- press to connect to wifi -</string>
<string name="downloading">Downloading...</string>
<string name="new_version_update_question">Newer version available.\nDo you wish to update ?</string>
<string name="download_starting">Download starting...</string>
<string name="connect_success">Successfully connected.</string>
<string name="connecting">Connecting...</string>
<string name="connect_fail">Connection failed.</string>
<string name="unknown_wifi">Unknown Wifi. Unable to connect.</string>
<string name="already_connected">Already connected.</string>
<string name="wifi_disabled">Wifi disabled. Unable to connect.</string>

<array name="location_text">
	<item>@string/brazil</item>
	<item>@string/canada</item>
	<item>@string/germany</item>
	<item>@string/israel</item>
</array>
<string-array name="location_id">
	<item>@string/brazil_code</item>
	<item>@string/canada_code</item>
	<item>@string/germany_code</item>
	<item>@string/israel_code</item>
</string-array>
<string name="pref_settings_location_default_value">IL</string>
<string name="pref_settings_location">Location</string>
<string name="pref_settings_location_summary">Choose your location</string>
<string name="pref_settings_location_key">location</string>
<string name="pref_settings_location_dialog_title">Location</string>

<string name="host_name_aruba_networks">securelogin.arubanetworks.com</string>
<string name="host_name_sap">wlan.sap.com</string>

</resources>
